tests/should_fail/enum_redeclared.nv
module main

// SHOULD FAIL: defining two enums with the same name
enum Color {
    Red,
    Green,
    Blue
}

enum Color {
    Cyan,
    Magenta,
    Yellow
}

let c = Color::Red
println(c)
